# MALL

./: .gitignore  LICENSE  README.md  delete_migrations.py  knn_model.pkl  pyproject.toml  requirements.txt  test.txt  user_follow_matrix.pkl  user_ids.pkl
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/boards/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
apps/carts/: admin.py  apps.py  models.py  urls.py  views.py
apps/follows/: admin.py  apps.py  models.py  recommend.py  signals.py  urls.py  utils.py  views.py
apps/likes/: admin.py  apps.py  models.py  urls.py  views.py
apps/oauth/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/orders/: admin.py  models.py  urls.py  views.py
apps/payments/: admin.py  apps.py  models.py  urls.py  views.py
apps/sellers/: admin.py  forms.py  models.py  urls.py  views.py
apps/songs/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
config/: cache_utils.py  forms.py  settings.py  urls.py  utils.py  views.py
templates/: 404.html  base.html  daily_chart.html  home.html
templates/accounts/: apply_seller.html  download_detail.html  following.html  login_form.html  profile.html  purchase_detail.html  sales_detail.html  signup_form.html
templates/boards/: board_create.html  board_list.html  board_list_recent.html  board_read.html  board_update.html  bookmark_list.html  index.html
templates/carts/: my_songs.html  my_songs_1.html
templates/follows/: following_song.html
templates/orders/: order_detail.html  order_list.html
templates/payments/: payment_detail.html  payment_pay.html
templates/search/: post_search.html
templates/sellers/: apply.html  seller_artist.html  seller_detail.html  seller_edit.html  seller_songs.html  seller_upload.html  verify.html
(+31 files in other folders)
