[tool.poetry]
name = "mall"
version = "0.1.0"
description = ""
authors = ["madEffort <madeffort0903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^5.0.4"
django-taggit = "^5.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
python-decouple = "^3.8"
django-allauth = "0.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
