[tool.poetry]
name = "mall"
version = "0.1.0"
description = ""
authors = ["madEffort <madeffort0903@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
python-decouple = "^3.8"
django-allauth = "0.61.1"
requests = "2.26.0"
iamport-rest-client = "^0.9.0"
sorl-thumbnail = "^12.10.0"
boto3 = "^1.34.95"
django-storages = "^1.14.2"
twilio = "^9.0.5"
django-cors-headers = "^4.3.1"
django-widget-tweaks = "^1.5.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
